# umms

./: Makefile.am  README  TODO  autogen.sh  configure.ac  configure.in  umms.conf  umms.pc.in  ummsclient.pc.in
examples/: Makefile.am  client.py  sample-client-gobject.c  sample-client.py
libummsclient/: Makefile.am  libummsclient.py  umms-client-object.c  umms-client-object.h
scripts/: Makefile.am  umms
spec/: Makefile.am  umms-audio-manager.xml  umms-media-player.xml  umms-object-manager.xml  umms-playing-content-metadata-viewer.xml  umms-video-output.xml
src/: Makefile.am  audio-manager-engine.c  audio-manager-engine.h  audio-manager-interface.c  audio-manager-interface.h  com.UMMS.conf  com.UMMS.service.in  com.meego.UMMS.conf  com.meego.UMMS.service.in  dvb-player-control-base.c  dvb-player-control-base.h  dvb-player-control-generic.c  dvb-player-control-generic.h  dvb-player-control-tv.c  dvb-player-control-tv.h  dvb-player.c  dvb-player.h  engine-common.c  engine-common.h  engine-dvb-generic.c  engine-dvb-generic.h  engine-generic.c  engine-generic.h  engine-gst.c  engine-gst.h  engine-test.c  engine-tv.c  engine-tv.h  media-player-control.c  media-player-control.h  media-player-factory.c  media-player-factory.h  media-player.c  media-player.h  meego-media-player-control-interface.c  meego-media-player-control-interface.h  meego-media-player-control.c  meego-media-player-control.h  meego-media-player-gstreamer.c  meego-media-player-gstreamer.h  (+50 more)
test/: Makefile.am  client-test-gobject.c  client-test.py  engine-test.c  schedule-record.py  test-client-gobject.c  test-common.c  test-common.h
test/ui/: Makefile.am  gtk-backend-gst.c  gtk-backend-umms.c  gtk-backend.h  main.c  umms-gtk-backend-gst.c  umms-gtk-backend.h  umms-gtk-player.c  umms-gtk-player.h  umms-gtk-ui.c  umms-gtk-ui.h
ui/: Makefile.am  base.c  main.c  umms-gtk-backend-gst.c  umms-gtk-backend.c  umms-gtk-backend.h  umms-gtk-player.c  umms-gtk-player.h  umms-gtk-ui.c  umms-gtk-ui.h
umms-mtv/: configure.in
umms-mtv/src/: engine-gst.c  meego-media-player.h  meego-tv-player.h  umms-common.h  umms-marshals.list  umms-server.service.in  umms.xml
