#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT(umms, 0.0.1, http://www.intel.com)
AC_CONFIG_SRCDIR([src/meego-media-player-gstreamer.h])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(umms, 0.0.1)

LT_PREREQ([2.2.6])
LT_INIT()

# Checks for programs.
AC_PROG_CC

AM_PROG_CC_C_O

# Checks for libraries.

PKG_CHECK_MODULES(UMMS, 			\
		  glib-2.0 >= 2.24 	\
          gstreamer-interfaces-0.10 \
          x11 \
		  dbus-glib-1)

PKG_CHECK_MODULES(UMMS_SAMPLE_UI, 			\
		  glib-2.0 >= 2.24 	\
          gstreamer-interfaces-0.10 \
          x11 \
		  gtk+-2.0 \
		  dbus-glib-1)


PKG_CHECK_MODULES(UMMSCLIENT, 			\
		  dbus-glib-1)


# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE

# Checks for library functions.

AC_CONFIG_FILES([Makefile
				 examples/Makefile
				 test/Makefile
				 libummsclient/Makefile
				 spec/Makefile
				 ui/Makefile
                 src/Makefile])
AC_OUTPUT
