bin_PROGRAMS = sample-client-gobject
sample_client_gobject_CFLAGS = $(UMMSCLIENT_CFLAGS)
sample_client_gobject_LDFLAGS = $(UMMSCLIENT_LIBS)
sample_client_gobject_LDADD = ../libummsclient/libummsclient.a
sample_client_gobject_SOURCES = sample-client-gobject.c \
							  ../src/umms-marshals.c \
							  ../src/umms-marshals.h


EXTRA_DIST = sample-client.py
