noinst_PROGRAMS = gtk-UMMS-test

gtk_UMMS_test_CFLAGS = $(UMMS_SAMPLE_UI_CFLAGS)
gtk_UMMS_test_LDFLAGS = $(UMMS_SAMPLE_UI_LIBS)
#gtk_UMMS_test_LDADD = ../libummsclient/libummsclient.a
gtk_UMMS_test_SOURCES = main.c  umms-gtk-backend-gst.c  umms-gtk-backend.h  umms-gtk-player.c  umms-gtk-player.h  umms-gtk-ui.c  umms-gtk-ui.h 

